--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,8 @@
 	<artifactId>cache-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cache-api</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<description>Spring Boot project for Recruitment test in Sadad</description>
+
 	<properties>
 		<java.version>17</java.version>
 	</properties>
