--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=cache-api
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+management.endpoints.web.exposure.include=*
