--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,12 @@ spring.application.name=cache-api
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# ???? ???? ???? ???????????? Actuator
 management.endpoints.web.exposure.include=*
+
+# ???? ???? ????????
+management.endpoint.metrics.enabled=true
+
+# ????? base path ???? Actuator
+management.endpoints.web.base-path=/actuator
